k8s/socket-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petrosa-socket-client
  namespace: petrosa-apps
  labels:
    app: socket-client
    component: websocket-client
    version: VERSION_PLACEHOLDER
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: socket-client
    component: websocket-client
